# prediction-market-mcp-server

./: .env.example  .gitignore  .mcp.json  Dockerfile.gateway  PROJECT_COMPLETE.md  README.md  pyproject.toml  test_websocket.py  validate_config.py
.claude/: settings.local.json
docs/plans/: 2025-01-20-multi-platform-arbitrage-design.md  2025-01-20-phase1-foundation-plan.md  2025-01-21-phase2-kalshi-parity.md  Prediction_Market_ARB_Deep_Research_Gemini.md
src/polymarket_mcp/: server.py
src/prediction_mcp/: __init__.py  server.py
src/prediction_mcp/core/: __init__.py  config.py  redis_client.py
src/prediction_mcp/cross_platform/: __init__.py  aggregation.py
tests/: conftest.py  test_server.py
tests/core/: test_config.py  test_redis.py
tests/integration/: test_kalshi_integration.py
