[project]
name = "prediction-mcp-server"
version = "0.2.0"
description = "Multi-platform prediction market MCP server for Polymarket and Kalshi"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # MCP Protocol
    "mcp>=1.0.0",

    # Polymarket
    "py-clob-client>=0.28.0",
    "eth-account>=0.11.0",

    # Kalshi
    "kalshi-python>=2.1.0",
    "cryptography>=41.0.0",

    # HTTP & WebSocket
    "websockets>=12.0",
    "httpx>=0.27.0",

    # Data & Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # Redis
    "redis>=5.0.0",
    "redis-om>=0.2.0",

    # Web Dashboard
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
prediction-mcp = "prediction_mcp.server:main"
polymarket-mcp = "prediction_mcp.platforms.polymarket.server:main"
kalshi-mcp = "prediction_mcp.platforms.kalshi.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 120

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
